--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -17,7 +17,7 @@
 </div>
  
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
+<p>{% blocktrans %}アカウントを持っていなければ、アカウントを新しく作成してください
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
  
