--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
-{% load django_bootstrap5 %}
-
+{% load bootstrap5 %}
 <html lang="ja">
   <head>
     <!-- Required meta tags -->
