--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -15,7 +15,7 @@
   </ul>
 </div>
  
-{% else %}
+{% else %}list
 <p>{% blocktrans %}アカウントを持っていなければ、アカウントを新しく作成してください
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
