--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,6 +1,9 @@
 {% extends "templates\base.html" %}
 
- 
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><!doctype html>
+
+</head>
  
  
 <h1 class="h3 mb-3 font-weight-normal">ログイン</h1>
