--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,4 +1,4 @@
-{% extends "C:\Users\kinno\Desktop\snsproject-master\templates\base.html" %}
+{% extends "templates\base.html" %}
 
 {% block content %}
 <div class="container">
