--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -48,7 +48,7 @@
 
       /* Custom CSS for the login form */
       .form-signin {
-        margin-top: 20px; /* フォームを少し下げる */
+        margin-top: 80px; /* フォームをさらに下げる */
       }
 
       /* Custom CSS for the login title */
