--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -32,6 +32,7 @@
 
       /* Custom CSS for left and right spacing */
       body {
+        width:50%;
         padding: 40px 100px; /* 上下左右の余白を増やす */
       }
 
