--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -74,7 +74,7 @@
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
 
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <input type="text" class="form-control" id="floatingInput" placeholder="name">
           <label for="floatingInput">アカウント名</label>
         </div>
         <div class="form-floating">
