--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -70,7 +70,7 @@
       Commuin
     </div>
     <main class="form-signin">
-      <form action="{% url 'tag' %}">
+      <form action="{% url 'tag' %}" method="POST">
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
 
         <div class="form-floating">
