--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -71,6 +71,7 @@
     </div>
     <main class="form-signin">
       <form action="{% url 'tag' %}" method="POST">
+        {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
 
         <div class="form-floating">
