--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -2,11 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.83.1">
-    <title>Signin Template · Bootstrap v5.0</title>
+    <title>Commuin</title>
 
     <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/sign-in/">
 
@@ -63,7 +59,6 @@
       </style>
 
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
     <div class="custom-text">
