--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -85,6 +85,8 @@
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">ログイン</button>
       </form>
+
+      <p>ユーザー登録は <a href="{{ signup_url }}">こちら</a><p>
     </main>
   </body>
 </html>
