--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -65,7 +65,7 @@
       Commuin
     </div>
     <main class="form-signin">
-      <form action="{% url 'home' %}" method="POST">
+      <form action="{% 'home' %}" method="POST">
         {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
 
