--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Commuin</title>
+    <title>Commui</title>
 
     <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/sign-in/">
 
