--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Commui</title>
+    <title>Commuin</title>
 
     <link rel="canonical" href="https://getbootstrap.jp/docs/5.0/examples/sign-in/">
 
@@ -65,7 +65,7 @@
       Commuin
     </div>
     <main class="form-signin">
-      <form>
+      <form  method="post">
         {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
 
