--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -65,8 +65,8 @@
       Commuin
     </div>
     <main class="form-signin">
-      <form method="post">
-        {% csrf_token %}
+      <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
     
         <div class="form-floating">
