--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -65,7 +65,7 @@
       Commuin
     </div>
     <main class="form-signin">
-      <form method="post" action="{% url 'account_login' %}">
+      <form method="post" action="{% url 'tag' %}">
                 {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
     
