--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -65,8 +65,8 @@
       Commuin
     </div>
     <main class="form-signin">
-      <form method="post" action="{% url 'tag' %}">
-                {% csrf_token %}
+      <form class="login" method="POST" action="/accounts/login/">
+        {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal">ログイン</h1>
     
         <div class="form-floating">
