--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,33 @@
 {% load static %}
 <html lang="ja">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="static\style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><!doctype html>
-  </head>
-    {% block customcss %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!doctype html>
+</head>
+{% block customcss %}
 
-    {% endblock customcss %}
+{% endblock customcss %}
 
-    <style>
-      /* Custom CSS for moving the navigation to the left */
-      .move-navbar {
+<style>
+    /* Custom CSS for moving the navigation to the left */
+    .move-navbar {
         flex-direction: column;
         align-items: flex-start;
-      }
-      .move-navbar .navbar-nav {
-        width: 100%;
-      }
+    }
 
-      .username-toggler {
+    .move-navbar .navbar-nav {
+        width: 100%;
+    }
+
+    .username-toggler {
         border: none;
         background: none;
         color: inherit;
@@ -32,32 +35,58 @@
         display: flex;
         align-items: center;
     }
+
+</style>
+
+<title>SNSアプリサンプル</title>
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 move-navbar"> <!-- Add move-navbar class -->
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'tag' %}">Commuin</a>
+        <button class="navbar-toggler username-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+            {{request.user.username}}さん <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="/accounts/logout/">ログアウト</a>
+                        </div>
+        </div>
+    </div>
+</nav>
+
+{% block content %}
+{% endblock content %}
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
+
+<script>
+  document.getElementById("logout-link").addEventListener("click", function(event) {
+    event.preventDefault(); // リンクのデフォルトの動作を無効にします（クリックしてもページが移動しないようにします）
     
-
-    </style>
-
-    <title>SNSアプリサンプル</title>
-  </head>
-  <body>
-  
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 move-navbar"> <!-- Add move-navbar class -->
-      <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'tag' %}">Home</a> 
-          <button class="navbar-toggler username-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              {{request.user.username}}さん <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                  <a class="nav-link" href="/accounts/logout/">ログアウト</a>
-                  <a class="nav-link btn btn-success" href="{% url 'create' %}" role="button">投稿</a>
-              </div>
-          </div>
-      </div>
-  </nav>
-  
-      {% block content %}
-      {% endblock content %}
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-  </body>
+    // ログアウトフォームを動的に送信
+    var form = document.createElement("form");
+    form.setAttribute("method", "post");
+    form.setAttribute("action", "/accounts/logout/");
+    
+    var csrfTokenInput = document.createElement("input");
+    csrfTokenInput.setAttribute("type", "hidden");
+    csrfTokenInput.setAttribute("name", "csrfmiddlewaretoken");
+    csrfTokenInput.setAttribute("value", "{% csrf_token %}");
+    
+    form.appendChild(csrfTokenInput);
+    document.body.appendChild(form);
+    
+    form.submit(); // フォームを送信
+  });
+</script>
+</body>
 </html>
