--- a/templates/create_tag.html
+++ b/templates/create_tag.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2>タグ作成ページ</h2>
-    <form method="post" class="mt-3">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="{{ form.name.id_for_label }}">タグの名前</label>
-            {{ form.name }}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+                <div class="card-body">
+                    <h1 class="h3 mb-4 text-center">タグ作成ページ</h1>
+                    <form method="post" class="row g-2 align-items-center">
+                        {% csrf_token %}
+                        <div class="col-8">
+                            <label for="{{ form.name.id_for_label }}" class="form-label">タグの名前</label>
+                            {{ form.name }}
+                        </div>
+                        <div class="col-4">
+                            <button type="submit" class="btn btn-primary">投稿</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">投稿</button>
-    </form>
+    </div>
 </div>
 {% endblock content %}
