--- a/templates/create_tag.html
+++ b/templates/create_tag.html
@@ -6,15 +6,17 @@
         <div class="col-md-6">
                 <div class="card-body">
                     <h1 class="h3 mb-4 text-center">タグ作成ページ</h1>
-                    <form method="post" class="row g-2 align-items-center">
-                        {% csrf_token %}
-                        <div class="col-8">
-                            <label for="{{ form.name.id_for_label }}" class="form-label">タグの名前</label>
-                            {{ form.name }}
+                    <form action="{% url 'search-tag' %}" method="GET" class="form-inline my-2 my-lg-0">
+                        <div class="row">
+                            <div class="col">
+                                <input class="form-control" type="search" placeholder="Search Tag" name="name">
+                            </div>
+                            <div class="col-auto">
+                                <button class="btn btn-outline-success" type="submit">タグを作る</button>
+                            </div>
                         </div>
-                        <div class="col-4">
-                            <button type="submit" class="btn btn-primary">投稿</button>
-                        </div>
+                    </form>
+                                        </div>
                     </form>
                 </div>
             </div>
