--- a/templates/create_tag.html
+++ b/templates/create_tag.html
@@ -6,10 +6,10 @@
         <div class="col-md-6">
                 <div class="card-body">
                     <h1 class="h3 mb-4 text-center">タグ作成ページ</h1>
-                    <form action="{% url 'search-tag' %}" method="GET" class="form-inline my-2 my-lg-0">
+                    <form action="{% url 'tag' %}" method="GET" class="form-inline my-2 my-lg-0">
                         <div class="row">
                             <div class="col">
-                                <input class="form-control" type="search" placeholder="Search Tag" name="name">
+                                <input class="form-control" type="search" placeholder="create Tag" name="name">
                             </div>
                             <div class="col-auto">
                                 <button class="btn btn-outline-success" type="submit">タグを作る</button>
