--- a/templates/create_tag.html
+++ b/templates/create_tag.html
@@ -9,7 +9,7 @@
                     <form action="{% url 'tag' %}" method="GET" class="form-inline my-2 my-lg-0">
                         <div class="row">
                             <div class="col">
-                                <input class="form-control" type="search" placeholder="create Tag" name="name">
+                                <input class="form-control" type="text" placeholder="create Tag" name="name">
                             </div>
                             <div class="col-auto">
                                 <button class="btn btn-outline-success" type="submit">タグを作る</button>
