--- a/templates/create_tag.html
+++ b/templates/create_tag.html
@@ -7,6 +7,8 @@
                 <div class="card-body">
                     <h1 class="h3 mb-4 text-center">タグ作成ページ</h1>
                     <form action="{% url 'create-tag' %}" method="POST" class="form-inline my-2 my-lg-0">
+                        {% csrf_token %}
+
                         <div class="row">
                             <div class="col">
                                 <input class="form-control" type="text" placeholder="create Tag" name="name">
