--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -23,6 +23,15 @@
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
+        @media (max-width: 768px) {
+          body {
+            padding: 20px; /* スマートフォン向けの余白を調整 */
+          }
+        
+          .custom-text {
+            font-size: 2rem; /* スマートフォン向けのフォントサイズ調整 */
+          }
+        }
       }
 
       /* Custom CSS for left and right spacing */
