--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -22,6 +22,44 @@
           font-size: 3.5rem;
         }
       }
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+        }
+        @media (max-width: 768px) {
+          body {
+            font-size: 16px; /* フォントサイズを拡大 */
+          }
+        
+          .custom-text {
+            font-size: 2rem; /* タイトルのフォントサイズを拡大 */
+          }
+        
+          .form-signin {
+            max-width: 100%; /* フォームの最大幅を100%に設定 */
+          }
+        
+          .form-signin .form-control {
+            font-size: 1.2rem; /* フォームコントロールのフォントサイズを拡大 */
+          }
+        }
+      /* Custom CSS for left and right spacing */
+      body {
+        padding: 40px 100px; /* 上下左右の余白を増やす */
+      }
+      
+      /* Custom CSS for top-left text */
+      .custom-text {
+        position: absolute;
+        top: 20px; /* 上の余白を増やす */
+        left: 0;
+        right: 0;
+        text-align: center; /* テキストを中央揃えにする */
+        font-size: 4rem; /* Commuinを少し大きく */
+        font-weight: bold;
+      }
+
 
       /* Custom CSS for left and right spacing */
       body {
